# queria-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.ja.md  README.md  pyproject.toml  zensical.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: CNAME  index.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: cli.md  compatibility.md  direct-access.md  mcp.md
docs/reference/: cli.md  mcp-tools.md  python-api.md
src/queria/: __init__.py  auth.py  cli.py  core.py  login.py  mcp.py  telemetry.py
tests/: conftest.py  test_auth.py  test_cli.py  test_core.py  test_live.py  test_login.py  test_mcp.py  test_telemetry.py
