[project]
name = "queria"
version = "0.3.0"
description = "Query Japanese open data on Queria (data.queria.io) from the terminal, Python, and MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "flo8s" }]
keywords = ["opendata", "japan", "duckdb", "ducklake", "mcp"]
dependencies = [
    "duckdb>=1.5.4,<2.0",
    "tomli>=1.1.0; python_version < '3.11'",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.2",
]

[project.urls]
Homepage = "https://docs.queria.io/"
Documentation = "https://docs.queria.io/"
Repository = "https://github.com/queria-io/queria-cli"
Changelog = "https://docs.queria.io/changelog"

[project.scripts]
queria = "queria.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/queria"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
allow_zero_version = true
major_on_zero = false

[tool.pytest.ini_options]
addopts = "-m 'not network'"
markers = [
    "network: tests that hit the production catalog at data.queria.io",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "mcp>=1.2",
]
